// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search page should render correctly when search failed 1`] = `
<div>
  <div
    className="alert alert-danger"
    role="alert"
  >
    There was an error searching.  Please try again.
  </div>
  <div
    className="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      className="progress-bar progress-bar-striped progress-bar-animated"
      role="progressbar"
      style={
        Object {
          "width": "75%",
        }
      }
    />
  </div>
</div>
`;

exports[`search page should render correctly when searching 1`] = `
<div>
  <div
    className="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      className="progress-bar progress-bar-striped progress-bar-animated"
      role="progressbar"
      style={
        Object {
          "width": "75%",
        }
      }
    />
  </div>
</div>
`;
